--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  
+  .inputText
+  {
+    width: 35%;
+    margin-right: 1rem;
+    margin-top: 2rem;
+    padding: 10px;
+    border-radius: 5px;
+    border:black;
+    
   }
-  to {
-    transform: rotate(360deg);
+  /* .btn1{
+    width: 120px;
+    border-radius: 10%;
+    font-size:20px;
+    font-weight: 500;
+    margin-left: 2rem;
+    background-color: red;
+    cursor: pointer;  
+    max-width: 120px;
+    max-height: 30px;
+    color: white;
+  text-shadow: 2px 2px 4px #000000;
+  } */
+  #main{
+    margin-right: 50px;
   }
-}
+  .btn-danger{
+   
+    /* width: 120px; */
+    border-radius: 10%;
+    font-size:20px;
+    font-weight: 500;
+    margin-left: 2rem;
+    background-color: red;
+    cursor: pointer;  
+    max-width: 120px;
+    max-height: 50px;
+    color: white;
+  text-shadow: 2px 2px 4px #000000;
+  }
+  .container{
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    
+    
+    width: 50%;
+    padding: 3rem;
+    text-align: center;
+    background-color:aquamarine;
+    border-radius: 10px;
+    margin-top: 10rem;
+    margin-bottom: 10rem;
+    opacity: 80%;
+    border: 1px solid  black;
+  }
+  .btn-danger:hover{
+    
+  }
+  .list-items{
+    display:flex;
+    margin-top:1rem;
+    justify-content: space-between;
+    background-color:aquamarine;
+    box-shadow: 0 0 20px 0 black;
+    padding: 1rem;
+  }
